# SunTerra-LEG-Portal

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
docs/: portal-mermaid-map.md
docs/adr/: 0001-binding-pilot-private-hosting-and-rollout-gate.md  0002-mutation-binding-and-entry-approval.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/ops/: production-readiness.md
docs/plans/: sunterra-leg-member-mutation-portal.md
docs/prds/: sunterra-leg-member-mutation-portal-prd.md
frontend/: index.html
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
migrations/: env.py  script.py.mako
migrations/versions/: 0001_portal_state_snapshots.py  (+7 more)
scripts/: bootstrap_admin.py  check_api_types.py  export_openapi.py  generate_api_types.py  production_readiness.py
tests/: conftest.py  test_admin_mutation_review.py  test_admin_user_management_db.py  test_auth.py  test_auth_user_management.py  test_communication_guardrails.py  test_document_consent.py  test_file_evidence.py  test_health.py  test_invitation_onboarding.py  test_mutation_packages.py  test_mutation_packages_async_db.py  test_openapi_contracts.py  test_participant_contact_channels.py  test_partner_member_register.py  test_partner_package_workflow.py  test_persistent_portal_state.py  test_pilot_feedback.py  test_production_readiness.py  test_public_self_service_onboarding.py  test_regular_address_mutation.py  test_regular_mutation_types.py  test_special_mutations.py
(+6 files in other folders)
