[project]
name = "sunterra-leg-portal"
version = "0.1.0"
description = "Member and mutation portal for the SunTerra LEG Basadingen."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "sqlmodel>=0.0.24,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunterra_leg_portal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
